# learning

./: .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
asyncio/: ping.py
bayesian/: .gitignore  chapter1.ipynb  chapter2.ipynb  tf_helpers.py
bayesian-function-fit/: README.md  pyproject.toml  try_sample.ipynb  try_science_example.ipynb
bokeh/: bokeh_plotting.ipynb  boxplot.html  elements.html
code-challenge/: Megan's Even Account.ipynb  README.md  feedback.md  megan_account_test.ipynb
code-challenge/even_account/: __init__.py  account.py  expense_goal_aggregator.py  pay_cycle.py  real_date_account.py  transactions.py
compressive_sampling/: compressive_sensing.ipynb  l1.py  requirements.txt
flask-tutorial/: app.py  run.sh  test_app.py
flask-tutorial/templates/: index.html  query.html  upload.html
forecasting/arima/: learn_arima.ipynb
graphs/: graph-with-costs.ipynb  requirements.txt
learn-p5/: index.html  sketch.js
ml-tools/: pytorch_basics.ipynb  regression_basics.ipynb  shap_values.ipynb
ml-tools/tensorflow/: getting_started.ipynb  keras_getting_started.ipynb
ml-tools/torch/: 20231108_torch_quickstart.ipynb  20231110_model_metrics.ipynb  evaluation.py
signal/: basic-plots.ipynb  requirements.txt
sqllite/: matching-messages.py  practice.sqlite
stats/: ANOVA.ipynb  ab_testing.ipynb  numpy_stuff.ipynb  regression.ipynb
tensorflow/: keras_getting_started.ipynb  recurrent.ipynb  requirements.txt
terraform/: terraform.tfstate  terraform.tfstate.backup  tutorial.tf
