[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = "A collection of practice and experiments learning various python tools"
authors = ["Spencer Barton <sbarton272@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
jupyter = "^1.0.0"
jupyterlab = "^2.0.1"
matplotlib = "^3.2.0"
seaborn = "^0.10.0"
scipy = "^1.4.1"
numpy = "^1.18.1"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

