[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = "A collection of practice and experiments learning various python tools"
authors = ["Spencer Barton <sbarton272@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.0.1"
jupyter = "^1.0.0"
jupyterlab = "^2.0.1"
matplotlib = "^3.2.0"
seaborn = "^0.10.0"
statsmodels = "^0.14.0"
transformers = "^4.35.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
pyro-ppl = "^1.8.6"
bokeh = "^3.3.0"
duckdb = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

