[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = "A collection of practice and experiments learning various python tools"
authors = ["Spencer Barton <sbarton272@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.0.1"
jupyter = "^1.0.0"
jupyterlab = "^3"
matplotlib = "^3.2.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
transformers = "^4.35.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
pyro-ppl = "^1.8.6"
bokeh = "^3.3.0"
duckdb = "^0.9.1"
scikit-learn = "^1.3.2"
jupyterlab-geojson = "^3.4.0"
jupyterlab-git = "^0.44.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

